test/runnable/imports/test7494b.d
module imports.test7494b;

string foo7494()
{
    return "imports.test7494b.foo7494";
}
