test/fail_compilation/fail141.d

char* bar()
{
    char[4] string = "abcd";
    return string.ptr;
}

